Changed name of the package

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,4 +1,4 @@
-@book{Kuttruff2019RoomAcoustics,
+﻿@book{Kuttruff2019RoomAcoustics,
     title = {{Room Acoustics}},
     year = {2019},
     author = {Kuttruff, H},
@@ -50,7 +50,7 @@
     title = {{Room acoustics modelling in the time-domain with the nodal discontinuous Galerkin method}},
     year = {2019},
     journal = {The Journal of the Acoustical Society of America},
-    author = {Wang, Huiqing and Sihar, Indra and Pag{\'{a}}n Mu{\~{n}}oz, Raúl and Hornikx, Maarten},
+    author = {Wang, Huiqing and Sihar, Indra and Pag{\'{a}}n Mu{\~{n}}oz, RaÃºl and Hornikx, Maarten},
     number = {4},
     month = {4},
     pages = {2650--2663},
@@ -79,7 +79,7 @@
     title = {{Including scattering within the room acoustics diffusion model: An analytical approach}},
     year = {2016},
     journal = {The Journal of the Acoustical Society of America},
-    author = {Foy, Cédric and Picaut, Judicaël and Valeau, Vincent},
+    author = {Foy, CÃ©dric and Picaut, JudicaÃ«l and Valeau, Vincent},
     number = {4},
     month = {10},
     pages = {2659--2669},
@@ -108,7 +108,7 @@
     title = {{Comparative Evaluation of Ray Tracing and Diffusion Equation Modeling in Room Acoustics Design of Subway Stations}},
     year = {2020},
     journal = {Acoustics Australia},
-    author = {S{\"{u}} G{\"{u}}l, Zühre and Odaba{\c{s}}, Erinç and {\c{C}}alı{\c{s}}kan, Mehmet},
+    author = {S{\"{u}} G{\"{u}}l, ZÃ¼hre and Odaba{\c{s}}, ErinÃ§ and {\c{C}}alÄ±{\c{s}}kan, Mehmet},
     number = {1},
     month = {4},
     pages = {93--105},
@@ -130,7 +130,7 @@
     title = {{Determination of a diffusion coefficient function for long rooms using a least square optimization approach}},
     year = {2024},
     booktitle = {Internoise 2024},
-    author = {Fichera, Ilaria and Van hoorickx, Cédric and Hornikx, Maarten}
+    author = {Fichera, Ilaria and Van hoorickx, CÃ©dric and Hornikx, Maarten}
 }
 
 
@@ -138,7 +138,7 @@
     title = {{A neural network for predicting with the diffusion equation: a case study of long rooms}},
     year = {2025},
     booktitle = {Forum Acousticum 2025},
-    author = {Fichera, Ilaria and Deleforge, Antoine and Foy, Cédric and Pascal, Jean-Daniel and Prax, Christian and Tonelli, Marceau and Van hoorickx, Cédric and Hornikx, Maarten}
+    author = {Fichera, Ilaria and Deleforge, Antoine and Foy, CÃ©dric and Pascal, Jean-Daniel and Prax, Christian and Tonelli, Marceau and Van hoorickx, CÃ©dric and Hornikx, Maarten}
 }
 
 
